# assessify-platform

./: .dependency-cruiser.cjs  .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  assessify-platform.code-workspace  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.beads/: issues.jsonl  metadata.json
.claude/: launch.json
.do/: app.staging.yaml  app.yaml
.github/workflows/: ci.yml
apps/pdf-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/pdf-service/app/: __init__.py  main.py  renderer.py
apps/pdf-service/tests/: conftest.py  test_api.py  test_golden.py
apps/pdf-service/tests/fixtures/: report_basic.html  report_multipage.html
apps/pdf-service/tests/golden/: report_basic.a4.json  report_basic.letter.json  report_multipage.a4.json  report_pro_d.a4.json
apps/web/: Dockerfile  middleware.ts  next.config.ts  package.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/lib/: auth-client.ts  auth.ts  env.ts  (+6 more)
apps/worker/: Dockerfile  README.md  package.json
docs/: deploy.md  pro-logic-openapi.json
docs/spec/: 00-README.md  01-vision-scope-phasing.md  02-legacy-system-analysis.md  03-architecture.md  04-data-model.md  05-roles-and-access.md  06-orders-and-state-machine.md  07-questionnaire-engine.md  08-scoring-module.md  09-reports-and-pdf.md  10-billing-entitlements-royalties.md  11-white-label-domains.md  12-external-api.md  13-notifications-and-reminders.md  14-migration.md  15-brand-design-system.md  16-backlog.md  appendix-architecture-layers.md
(+152 files in other folders)
