[project]
name = "assessify-pdf-service"
version = "0.1.0"
description = "Internal HTML-to-PDF rendering service (WeasyPrint + FastAPI). Contract: docs/spec/09-reports-and-pdf.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic>=2.10,<3",
    "uvicorn[standard]>=0.34,<1",
    "weasyprint>=63,<66",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pypdf>=5,<6",
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.uv]
# Not a distributable package — just an app run with uvicorn.
package = false
